RbA Build/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Margin_Reduction__c</fullName>
        <description>Formula for Margin Reduction</description>
        <formula>(((  Product_Cost__c  ) + (Total_Materials_Applied__c)) * ( Store_Location__r.Active_Store_Configuration__r.Backdown_Use_Tax_Margin__c ))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Application_Pct__c</fullName>
        <description>% of Sale Price that is considered the amount of Materials applied to the job for job costing</description>
        <label>Material Application Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Milage for Service Orders</description>
        <label>Mileage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Misc_Amount__c</fullName>
        <description>The sum of all discounts applied.</description>
        <inlineHelpText>The sum of all discounts applied.</inlineHelpText>
        <label>Misc Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Sufficient_Funds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount of payments marked as non-sufficient funds.</description>
        <inlineHelpText>The amount of payments marked as non-sufficient funds.</inlineHelpText>
        <label>Non-Sufficient Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberProducts__c</fullName>
        <label># of Products</label>
        <summaryFilterItems>
            <field>OrderItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Open_Events_on_WOs__c</fullName>
        <description>Queried for validation on closing Orders as users cannot close Orders if there are Work Orders w/ Open Events. Set by rollups.</description>
        <label>Number Open Events on WOs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <description>The number of units including doors, windows and others.</description>
        <formula>Door_Rollup__c + Other_Rollup__c + Windows_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of units including doors, windows and others.</inlineHelpText>
        <label># of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offsite_Storage__c</fullName>
        <inlineHelpText>Location of where the Job Folder is located offsite.</inlineHelpText>
        <label>Offsite Storage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Owner__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Processed_Date__c</fullName>
        <description>The date the order was processed.</description>
        <inlineHelpText>The date the order was processed.</inlineHelpText>
        <label>Order Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Crew__c</fullName>
        <formula>Sold_Order__r.Primary_Installer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled over from the associated Sold Order</inlineHelpText>
        <label>Original Crew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Stainer__c</fullName>
        <formula>Sold_Order__r.Stainer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled over from the associated Sold Order</inlineHelpText>
        <label>Original Stainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Tech_Measure__c</fullName>
        <formula>Sold_Order__r.Primary_Tech_Measure__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled over from the associated Sold Order</inlineHelpText>
        <label>Original Tech Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cost_Rollup__c</fullName>
        <label>Other Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Rollup__c</fullName>
        <description>The number of products sold on this order that are of type &apos;Other&apos;.</description>
        <inlineHelpText>The number of products sold on this order that are of type &apos;Other&apos;.</inlineHelpText>
        <label>Other</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Sales_Rollup__c</fullName>
        <label>Other Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Name_Phone__c</fullName>
        <description>Used in the Conga files because there is no access to the sales rep name in the Master Data setup.</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName &amp; &quot; - Cell Phone:&quot; &amp; Owner:User.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record Owner Name and Mobile Phone Number</inlineHelpText>
        <label>Owner Name Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Stain_Status__c</fullName>
        <inlineHelpText>Set by related Paint/Stain Work Order</inlineHelpText>
        <label>Paint/Stain Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patio_Door_Rollup__c</fullName>
        <label>Patio Door Rollup</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payments_Received__c</fullName>
        <description>A rollup of all of the payments that have been applied to this order.</description>
        <inlineHelpText>A rollup of all of the payments that have been applied to this order.</inlineHelpText>
        <label>Payments Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Cost__c</fullName>
        <label>Permit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Permit_Status__c</fullName>
        <inlineHelpText>Populated from the Process Builder from the Order.</inlineHelpText>
        <label>Permit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <label>Pivotal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Order_Assignment__c</fullName>
        <description>The unique order number in Pivotal.</description>
        <inlineHelpText>The unique order number in Pivotal.</inlineHelpText>
        <label>Pivotal Order Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Retail_Total__c</fullName>
        <description>The total retail amount in Pivotal</description>
        <inlineHelpText>The total retail amount in Pivotal</inlineHelpText>
        <label>Pivotal Retail Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pivotal_Service_Request_Number__c</fullName>
        <label>Pivotal Service Request Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Install_Call__c</fullName>
        <label>Post Install Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Installer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by Rollups, the Primary Service from the related Service WO</description>
        <inlineHelpText>the Primary Service from the related Service WO</inlineHelpText>
        <label>Primary Service</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Orders (Primary Service)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Tech_Measure_Email__c</fullName>
        <description>Used in mobile api to get Primary Tech Measure information to rSuite</description>
        <formula>Primary_Tech_Measure__r.RbA_User__r.Email</formula>
        <label>Primary Tech Measure Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Tech_Measure_Name__c</fullName>
        <description>Used in mobile api to get Primary Tech Measure information to rSuite</description>
        <formula>Primary_Tech_Measure__r.RbA_User__r.FirstName + &apos; &apos; + Primary_Tech_Measure__r.RbA_User__r.LastName</formula>
        <label>Primary Tech Measure Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Tech_Measure_Phone__c</fullName>
        <description>Used in mobile api to get Primary Tech Measure information to rSuite</description>
        <formula>Primary_Tech_Measure__r.RbA_User__r.Phone</formula>
        <label>Primary Tech Measure Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Tech_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by Rollups, the Primary TM from the related TM WO</description>
        <inlineHelpText>the Primary TM from the related TM WO</inlineHelpText>
        <label>Primary Tech Measure</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Orders (Primary Tech Measure)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Status__c</fullName>
        <description>Status prior to changing to &apos;On Hold&apos;</description>
        <label>Prior Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_COGS__c</fullName>
        <label>Product COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Cost_Jobs__c</fullName>
        <formula>Product_Cost__c - AR_Write_Off__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost (Jobs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Cost_Percent__c</fullName>
        <formula>Product_Cost__c / Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Cost %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Notes__c</fullName>
        <defaultValue>&quot;this may be subject to sales tax&quot;</defaultValue>
        <label>Quote Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Subtotal__c</fullName>
        <description>Rollup of all Order Items Quote Amount</description>
        <inlineHelpText>Sum of the Quote Amount for all products added to this order</inlineHelpText>
        <label>Quote Subtotal</label>
        <summarizedField>OrderItem.Quote_Amount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>Not sure if all the vaules belong at the Order Level.</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>HOA/Historical Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measure Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Funding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Labor__c</fullName>
        <description>Multiplies total procedure time by the standard reimbursement rate (currently 29)</description>
        <formula>(29* Total_Procedure_Time__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multiplies total procedure time by the standard reimbursement rate (currently 29)</inlineHelpText>
        <label>Reimbursement Labor $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Mileage__c</fullName>
        <description>Multiplies manually entered Mileage by reimbursement rate (currently 1.07)</description>
        <formula>1.07* Mileage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multiplies manually entered Mileage by reimbursement rate (currently 1.07)</inlineHelpText>
        <label>Reimbursement Mileage $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reinstall_Date__c</fullName>
        <description>When a Service Request is the Status of Job in Progress AND there&apos;s an Install WO, the Sold Order reflects this &quot;reinstall date&quot;.</description>
        <inlineHelpText>Automatically populated when a related Service Request is Job in Progress and has an Install Work Order. The installation date for that Service Request is populated in the Reinstall Date</inlineHelpText>
        <label>Reinstall Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renovate_Right_Booklet_Signed_Date__c</fullName>
        <label>Renovate Right Booklet Signed Date</label>
        <summarizedField>Back_Office_Check__c.Signed_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Back_Office_Check__c.Name</field>
            <operation>equals</operation>
            <value>Renovate Right Booklet</value>
        </summaryFilterItems>
        <summaryForeignKey>Back_Office_Check__c.Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Renovation_Record_Keeping__c</fullName>
        <label>Renovation Record Keeping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Subtotal__c</fullName>
        <description>Rollup of the retail price of all order items linked to this order that are not cancelled and where the Responsible Party is set to Homeowner.</description>
        <inlineHelpText>Rollup of the retail price of all order items linked to this order that are not cancelled and where the Responsible Party is set to Homeowner.</inlineHelpText>
        <label>Retail Subtotal</label>
        <summarizedField>OrderItem.Total_Retail_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.Responsible_Party__c</field>
            <operation>equals</operation>
            <value>Homeowner</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Retail_Total__c</fullName>
        <description>The total retail amount (retail subtotal - discount)</description>
        <formula>Retail_Subtotal__c -  Discount_Amount__c + Change_Order_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total retail amount (retail subtotal - discount)</inlineHelpText>
        <label>Retail Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevRecognizedCount__c</fullName>
        <formula>IF(ISBLANK(Revenue_Recognized_Date__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RevRecognizedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Post_Date__c</fullName>
        <label>Revenue_Post_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognized_Date__c</fullName>
        <description>The date revenue was recognized for this order.</description>
        <inlineHelpText>The date revenue was recognized for this order.</inlineHelpText>
        <label>Revenue Recognized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set whenever revenue is recognized for the order.</description>
        <inlineHelpText>This flag is set whenever revenue is recognized for the order.</inlineHelpText>
        <label>Revenue Recognized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>Sales order number used by Boston CORO.</description>
        <inlineHelpText>Sales order number used by Boston CORO.</inlineHelpText>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <description>Used in mobile api to get Sales Rep information to rSuite</description>
        <formula>Owner:User.Email</formula>
        <label>Sales Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone__c</fullName>
        <description>Used in mobile api to get Sales Rep information to rSuite</description>
        <formula>Owner:User.Phone</formula>
        <label>Sales Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Opportunity.Owner.FirstName &amp;&quot; &quot;&amp;Opportunity.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percent__c</fullName>
        <description>Set automatically by the Store Configuration</description>
        <inlineHelpText>Set automatically by the Store Configuration</inlineHelpText>
        <label>Sales Tax Percent</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>Multiplies the Billable Tax Amount (the billable amount on all child OrderItems where Customer Pickup = Yes) by the Sales Tax Percent (set by Store Configuration)</description>
        <formula>Billable_Tax_Amount__c *  Sales_Tax_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multiplies the Billable Tax Amount (the billable amount on all child OrderItems where Customer Pickup = Yes) by the Sales Tax Percent (set by Store Configuration)</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Save_Reason__c</fullName>
        <description>Used on the Service Record Type.</description>
        <inlineHelpText>Save Details</inlineHelpText>
        <label>Primary Save Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Sent Hardware to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Pick-up in Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Save_Reason__c</fullName>
        <description>Finer details on the save reason, dependent on Primary Save Reason</description>
        <label>Secondary Save Reason</label>
        <picklist>
            <controllingField>Save_Reason__c</controllingField>
            <picklistValues>
                <fullName>Window Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensation Packet Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Hardware/Doesn&apos;t Want to Wait for Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan_Date__c</fullName>
        <label>Sent to Baan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Baan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Baan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Series_2_Cost_Rollup__c</fullName>
        <label>Series 2 Cost Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Series_2_Rollup__c</fullName>
        <description>The rollup of the number of series 2 products on this order.</description>
        <inlineHelpText>The rollup of the number of series 2 products on this order.</inlineHelpText>
        <label>Series 2</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Series_2_Sales_Rollup__c</fullName>
        <label>Series 2 Sales Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Installation_Complete_Date__c</fullName>
        <inlineHelpText>Date the Service Installation was complete</inlineHelpText>
        <label>Service Installation Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <inlineHelpText>Set by related Service Work Order</inlineHelpText>
        <label>Service Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>Job In Progress should be selected if the Installation Date of the original product was in the last 30 days. Select Save if the request is solved during the initial phone call. Field Service is the default and only option for Cottage Grove users.</inlineHelpText>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Job in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_initiated_By__c</fullName>
        <label>Service Initiated By</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Used for UI purposes</description>
        <formula>ShippingStreet + BR() + 
ShippingCity +&quot;, &quot;+ ShippingState +&quot; &quot;+ ShippingPostalCode+BR()+ 
ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldOrderNumber__c</fullName>
        <formula>Sold_Order__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SoldOrderNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Order_JIP_Eligible__c</fullName>
        <description>Used to determine if the Service Request status should be default to Job in Progress in the process of creating a Service Request. If the Installation Date of the Sold Order is less than or equal to 30, than the Service Request defaults to Job in Progress.</description>
        <formula>AND(NOT(ISBLANK(Sold_Order__c)),
OR(AND(Today() - Sold_Order__r.Installation_Date__c &lt;= 30,Today() - Sold_Order__r.Installation_Date__c &gt;=0),Today()&lt;= Sold_Order__r.Installation_Date__c, ISBLANK(Sold_Order__r.Installation_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Order JIP Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_Order_Scheduled_Date__c</fullName>
        <formula>Sold_Order__r.Installation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Order Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Sold Order is Job In Progress, the Service Order must be related to the Sold Order.</inlineHelpText>
        <label>Sold Order</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Order.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Sold_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stain_Labor__c</fullName>
        <description>Rollup of the amount of dollars spent for staining.</description>
        <inlineHelpText>Rollup of the amount of dollars spent for staining.</inlineHelpText>
        <label>Stain Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stainer2__c</fullName>
        <formula>Stainer__c</formula>
        <label>Stainer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stainer__c</fullName>
        <inlineHelpText>This will populate from the Paint/Stain Work Order</inlineHelpText>
        <label>Stainer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staining_Revenue__c</fullName>
        <label>Staining Revenue</label>
        <summarizedField>OrderItem.Total_Retail_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.Paint_Stain__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This order is related to this store location.</description>
        <inlineHelpText>This order is related to this store location.</inlineHelpText>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Store Location)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TM_Appt_Complete__c</fullName>
        <description>The date the tech measure appointment was completed. Not currently populating this in Salesforce, but is here for data migration.</description>
        <inlineHelpText>The date the tech measure appointment was completed. Not currently populating this in Salesforce, but is here for data migration.</inlineHelpText>
        <label>TM Appt Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Complete_Date__c</fullName>
        <label>Tech Measure Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Date__c</fullName>
        <inlineHelpText>Date the Tech Measured has been scheduled for.</inlineHelpText>
        <label>Tech Measure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Phone__c</fullName>
        <formula>Primary_Tech_Measure__r.Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Measure Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Status__c</fullName>
        <inlineHelpText>Set by related Tech Measure Work Order</inlineHelpText>
        <label>Tech Measure Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Cancelled__c</fullName>
        <label>Time - Cancelled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Draft__c</fullName>
        <label>Time - Draft</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Install_Complete__c</fullName>
        <label>Time - Install Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Install_Needed__c</fullName>
        <label>Time - Install Needed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Install_Scheduled__c</fullName>
        <label>Time - Install Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Job_Close__c</fullName>
        <label>Time - Job Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Job_in_Progress__c</fullName>
        <label>Time - Job in Progress</label>
        <type>DateTime</type>
    </fields>
</CustomObject>